# ton-net

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  THIRD-PARTY-LICENSES.md  _typos.toml  about.hbs  about.toml  clippy.toml  deny.toml  justfile  lefthook.yml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: mutants.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-binding.yml  ci.yml  release-plz.yml  release.yml
LICENSES/: Apache-2.0.txt  LicenseRef-TON-network-config.txt
bindings/node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  test.mjs
bindings/node/examples/: balance.mjs  resume.mjs
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-musl/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/scripts/: check-package.mjs  prepare-packages.mjs  stage-licenses.mjs
bindings/node/src/: lib.rs
crates/ton-net/: Cargo.toml  README.md
crates/ton-net-adnl/: Cargo.toml  README.md
crates/ton-net-adnl/src/: connection.rs  frame.rs  handshake.rs  lib.rs  transport.rs
crates/ton-net-adnl/tests/: mainnet.rs  vectors.rs
crates/ton-net-block/: Cargo.toml  README.md
crates/ton-net-block/benches/: verify.rs
crates/ton-net-block/src/: account.rs  block.rs  chain.rs  coins.rs  dict.rs  error.rs  lib.rs  proof.rs  shard.rs  signature.rs  validators.rs
crates/ton-net-block/tests/: chain.rs  decode.rs  dictionary.rs  proof.rs  signature.rs  validators.rs  verify.rs
crates/ton-net-block/tests/fixtures/: active-account.hex  chain.hex  one-link-simplex.hex  read-absent.txt  read-masterchain.txt  storage-extra-account.hex  uninit-account.hex
crates/ton-net-cell/: Cargo.toml  README.md
crates/ton-net-cell/benches/: cells.rs  dict.rs
crates/ton-net-cell/proptest-regressions/: proptests.txt
crates/ton-net-cell/src/: boc.rs  builder.rs  cell.rs  dict.rs  error.rs  lib.rs  merkle.rs  proptests.rs  slice.rs  usage.rs
crates/ton-net-cell/src/boc/: compress.rs  header.rs  large.rs  lazy.rs  parse.rs  random.rs  serialize.rs  view.rs
crates/ton-net-cell/src/builder/: address.rs  snake.rs
crates/ton-net-cell/src/cell/: dump.rs  exotic.rs  hash.rs  json.rs  level.rs  metadata.rs
crates/ton-net-cell/src/dict/: aug.rs  floor.rs  label.rs  pfx.rs  plain.rs  prefix.rs  typed.rs
crates/ton-net-cell/src/merkle/: proof.rs  update.rs  virtualize.rs
crates/ton-net-cell/src/slice/: address.rs  compare.rs  snake.rs
crates/ton-net-cell/src/usage/: trace.rs
crates/ton-net-cell/tests/: augmented.rs  hashing.rs  hostile.rs  mainnet_boc.rs  merkle.rs  whole_block.rs
crates/ton-net-cell/tests/cell/: augmented.rs  hashing.rs  hostile.rs  main.rs  mainnet_boc.rs  merkle.rs  whole_block.rs
crates/ton-net-cell/tests/fixtures/: account-proof.hex  block-basechain.hex  block-masterchain.hex
crates/ton-net-lite/: Cargo.toml  README.md
crates/ton-net-lite/src/: client.rs  lib.rs  types.rs
crates/ton-net-lite/tests/: mainnet.rs
crates/ton-net-tl/: Cargo.toml  README.md
crates/ton-net-tl/src/: adnl.rs  lib.rs  lite.rs  signed.rs
crates/ton-net-tl/tests/: wire.rs
crates/ton-net-tl/tests/fixtures/: one-link-ordinary.hex
crates/ton-net/examples/: balance.rs  freshness.rs  own_anchor.rs  resume.rs
crates/ton-net/src/: address.rs  client.rs  codec.rs  config.rs  error.rs  lib.rs  mainnet.config.json  proof.rs  sync.rs  verified.rs
crates/ton-net/tests/: epoch.rs  mainnet.rs  snapshot.rs
crates/ton-net/tests/fixtures/: read-basechain.txt
docs/: api-design.md  architecture.md  conformance.md  release-process.md  roadmap.md  versions.md
docs/adr/: NET-ADR-001-architecture.md  NET-ADR-001-purpose-and-priorities.md  NET-ADR-002-architecture.md  NET-ADR-002-scope.md  NET-ADR-003-dependencies.md  NET-ADR-003-scope-and-write-path.md  NET-ADR-004-bindings-and-versioning.md  NET-ADR-004-dependencies.md  NET-ADR-005-trust-anchor.md  NET-ADR-005-tvm.md  NET-ADR-006-signature-verification.md  NET-ADR-006-trust-anchor.md  NET-ADR-007-signature-verification.md  NET-ADR-007-tvm.md  NET-ADR-008-parity-scope.md  NET-ADR-008-scope-and-write-path.md  NET-ADR-008-versioning-and-bindings.md  NET-ADR-009-code-structure.md  NET-ADR-009-versioning-and-binding-sequence.md  NET-ADR-010-boc-compression.md  NET-ADR-010-tvm-differential.md  NET-ADR-011-code-structure.md  NET-ADR-012-boc-compression-dependency.md
docs/design/: system-design.md
docs/plan/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
docs/protocol/: wire-format.md
docs/security/: threat-model.md
scripts/: check-config-drift.mjs  check-versions.mjs  check-workflows.mjs
spikes/adnl-feasibility/: Cargo.toml  README.md
spikes/adnl-feasibility/src/: main.rs
spikes/proof-feasibility/: Cargo.toml  README.md
spikes/proof-feasibility/src/: main.rs
spikes/sync-feasibility/: .gitignore  Cargo.toml  README.md
spikes/sync-feasibility/src/: block.rs  check.rs  lib.rs  main.rs  sig.rs  tl.rs
