[workspace]
resolver = "2"
members = [
    "crates/ton-net-tl",
    "crates/ton-net-adnl",
    "crates/ton-net-lite",
    "crates/ton-net",
    "bindings/node",
]
default-members = [
    "crates/ton-net-tl",
    "crates/ton-net-adnl",
    "crates/ton-net-lite",
    "crates/ton-net",
]
# The feasibility spike is a standalone project with its own lockfile.
exclude = ["spikes"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nirapod-labs/ton-net"
rust-version = "1.85"
authors = ["The ton-net Authors"]

[workspace.dependencies]
# Internal crates, referenced by path in the workspace and by version once published.
ton-net-tl = { path = "crates/ton-net-tl", version = "0.1.0-alpha.1" }

# External crates on the lines fixed in NET-ADR-003. Each member crate opts in as
# its layer is built through the v0.1.0 plan; unreferenced entries are inert.
tl-proto = "0.5"
# curve25519-dalek is at its current major (5): tl-proto does not pull it, so it
# stays a single copy. sha2/aes/ctr are held at tl-proto's crypto-common 0.1
# generation on purpose; bumping them duplicates the crypto machinery (NET-ADR-003).
curve25519-dalek = "5"
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
tokio = { version = "1", default-features = false }
# getrandom draws the per-session ADNL randomness at the I/O edge. Nothing else pulls
# it, so it is a single copy at its current major (NET-ADR-003).
getrandom = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
napi = { version = "3", default-features = false }
napi-derive = "3"
napi-build = "2"
