# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[workspace]
resolver = "2"
members = [
  "crates/ton-net-tl",
  "crates/ton-net-cell",
  "crates/ton-net-block",
  "crates/ton-net-adnl",
  "crates/ton-net-lite",
  "crates/ton-net",
  "bindings/node",
]
default-members = [
  "crates/ton-net-tl",
  "crates/ton-net-cell",
  "crates/ton-net-block",
  "crates/ton-net-adnl",
  "crates/ton-net-lite",
  "crates/ton-net",
]
# The feasibility spike is a standalone project with its own lockfile.
exclude = ["spikes"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nirapod-labs/ton-net"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates, referenced by path in the workspace and by version once published.
ton-net-tl = { path = "crates/ton-net-tl", version = "0.3.0" }
ton-net-cell = { path = "crates/ton-net-cell", version = "0.3.0" }
ton-net-block = { path = "crates/ton-net-block", version = "0.3.0" }
ton-net-adnl = { path = "crates/ton-net-adnl", version = "0.3.0" }
ton-net-lite = { path = "crates/ton-net-lite", version = "0.3.0" }
ton-net = { path = "crates/ton-net", version = "0.3.0" }

# External crates on the lines fixed in NET-ADR-003. Each member crate opts in as
# its layer is built through the v0.1.0 plan; unreferenced entries are inert.
tl-proto = "0.5"
# curve25519-dalek is at its current major (5): tl-proto does not pull it, so it
# stays a single copy. sha2/aes/ctr are held at tl-proto's crypto-common 0.1
# generation on purpose; bumping them duplicates the crypto machinery (NET-ADR-003).
curve25519-dalek = "5"
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
tokio = { version = "1", default-features = false }
# getrandom draws the per-session ADNL randomness at the I/O edge. Nothing else pulls
# it, so it is a single copy at its current major (NET-ADR-003).
getrandom = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Benchmarks only. Default features off drops the plotting stack, which is a
# large dependency tree for output the terminal already gives.
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
# Property tests only. Default features off drops the fork and timeout support, which
# runs each case in a subprocess; the properties here are pure and in-process.
proptest = { version = "1", default-features = false, features = ["std"] }
napi = { version = "3", default-features = false }
napi-derive = "3"
napi-build = "2"

# Clippy's default groups catch a wrong program. Pedantic catches where this one is
# loose about what it is doing, which on a decoder reading bytes from a peer it does not
# trust is most of what is worth catching.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Nursery lints are named one at a time rather than taken as a group. The group is
# clippy's staging area, the toolchain tracks stable, and lint runs with -D warnings, so
# taking the group would let a Rust release turn the build red on a change that touched
# nothing. missing_const_for_fn is deliberately absent: it asks for const on 41 public
# functions, and const on a published function is a promise that only breaks in one
# direction, which is the wrong trade while the cell engine is still being written.
use_self = "warn"
redundant_pub_crate = "warn"
redundant_clone = "warn"
significant_drop_tightening = "warn"

# Length here follows the size of the format being decoded, not complexity.
too_many_lines = "allow"

# Verifying a proof chain is signature-bound: a cold sync checks over a hundred thousand
# ed25519 signatures, and the curve and digest crates are roughly two orders of magnitude
# slower without optimization. Leaving them unoptimized in a debug build turns a two
# minute network test into one that outlives its own deadlines, so the dependencies are
# optimized while this workspace's own crates keep their debug builds.
[profile.dev.package."*"]
opt-level = 2
