# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-node"
description = "Node.js binding for the ton-net TON client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# napi-rs 3.x sets this crate's floor above the workspace core floor of 1.85.
rust-version = "1.88"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ton-net.workspace = true
napi = { workspace = true, features = ["napi9", "tokio_rt"] }
napi-derive.workspace = true
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
napi-build.workspace = true

[lints]
workspace = true
