[package]
name = "ton-net-adnl"
description = "ADNL transport for the ton-net TON client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ton-net-tl.workspace = true
curve25519-dalek.workspace = true
sha2.workspace = true
aes.workspace = true
ctr.workspace = true
thiserror.workspace = true
