# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-adnl"
description = "ADNL transport for the ton-net TON client."
keywords = ["ton", "adnl", "transport", "blockchain", "p2p"]
categories = ["network-programming", "cryptography::cryptocurrencies"]
readme = "README.md"
documentation = "https://docs.rs/ton-net-adnl"
homepage = "https://github.com/nirapod-labs/ton-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ton-net-tl.workspace = true
curve25519-dalek.workspace = true
sha2.workspace = true
aes.workspace = true
ctr.workspace = true
thiserror.workspace = true
getrandom.workspace = true
# The native transport only. TcpTransport reads and writes bytes; the driver above it
# is generic over the Transport seam and pulls no runtime of its own.
tokio = { workspace = true, features = ["net", "io-util", "time"] }

[dev-dependencies]
# The ignored network test runs on a tokio current-thread runtime and builds its query
# from the liteserver TL types.
tokio = { workspace = true, features = ["rt", "macros"] }
ton-net-tl.workspace = true
