[package]
name = "ton-net-block"
description = "TON block and account structures, decoded from cells, for the ton-net TON client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ton-net-cell.workspace = true
# A validator's short id is the sha256 of its key in TL form, which is how a signature
# names its signer.
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
# The block-proof fixtures are whole liteserver answers, so the tests decode one to
# reach the proofs inside it.
ton-net-tl.workspace = true
