# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-block"
description = "TON block and account structures, decoded from cells, for the ton-net TON client."
keywords = ["ton", "blockchain", "merkle-proof", "tlb", "block"]
categories = ["cryptography::cryptocurrencies", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/ton-net-block"
homepage = "https://github.com/nirapod-labs/ton-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# `cargo bench` would otherwise run the unit tests with criterion's flags.
bench = false

[dependencies]
ton-net-cell.workspace = true
# The block-proof wire types a chain is checked over, and the two messages a validator
# signature covers.
ton-net-tl.workspace = true
# Signature verification is built on the curve crate already in the tree rather than on
# an ed25519 crate, which would duplicate it (NET-ADR-007).
curve25519-dalek.workspace = true
# A validator's short id is the sha256 of its key in TL form, which is how a signature
# names its signer.
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
# The differential test compares this crate's acceptance rule against an audited
# implementation. It does not ship, so the curve copy it pulls reaches no consumer.
criterion.workspace = true
ed25519-dalek = "3"
rand_core = "0.10"

[[bench]]
name = "verify"
harness = false
