# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-cell"
description = "The TON cell model and bag-of-cells codec for the ton-net TON client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The representation hash is SHA-256, on the single copy NET-ADR-003 fixes.
sha2.workspace = true
thiserror.workspace = true
