# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-cell"
description = "The TON cell model and bag-of-cells codec for the ton-net TON client."
keywords = ["ton", "cell", "boc", "merkle", "blockchain"]
categories = ["data-structures", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/ton-net-cell"
homepage = "https://github.com/nirapod-labs/ton-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# `cargo bench` would otherwise run the unit tests with criterion's flags.
bench = false

[dependencies]
# The representation hash is SHA-256, on the single copy NET-ADR-003 fixes.
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "cells"
harness = false
