# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-cell"
description = "The TON cell model and bag-of-cells codec for the ton-net TON client."
keywords = ["ton", "cell", "boc", "merkle", "blockchain"]
categories = ["data-structures", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/ton-net-cell"
homepage = "https://github.com/nirapod-labs/ton-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# `cargo bench` would otherwise run the unit tests with criterion's flags.
bench = false

[features]
# JSON rendering of an ordinary cell tree, opt-in so the default build stays free of
# serde_json. The crate already sits in a tree that carries serde_json for config
# parsing, so this admits no new dependency, only a new use of one (NET-ADR-003).
json = ["dep:serde_json"]
# LZ4 compression of a serialized bag of cells, opt-in so the default build stays free
# of lz4_flex (admitted by NET-ADR-012).
compress = ["dep:lz4_flex"]

[dependencies]
# The representation hash is SHA-256, on the single copy NET-ADR-003 fixes.
sha2.workspace = true
thiserror.workspace = true
serde_json = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "cells"
harness = false

[[bench]]
name = "dict"
harness = false

[lints]
workspace = true
