# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Nirapod Labs

[package]
name = "ton-net-lite"
description = "Liteserver read client for the ton-net TON client."
keywords = ["ton", "liteserver", "client", "adnl", "blockchain"]
categories = ["network-programming", "cryptography::cryptocurrencies"]
readme = "README.md"
documentation = "https://docs.rs/ton-net-lite"
homepage = "https://github.com/nirapod-labs/ton-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ton-net-tl.workspace = true
ton-net-adnl.workspace = true
thiserror.workspace = true

[dev-dependencies]
# The ignored network test drives a real handshake over the TCP transport on a tokio
# current-thread runtime.
ton-net-adnl.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
