[package]
name = "ton-net"
description = "A direct client for the TON network: TL, ADNL, and liteserver over one Rust core."
keywords = ["ton", "blockchain", "adnl", "liteserver", "client"]
categories = ["network-programming", "cryptography::cryptocurrencies"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ton-net-lite.workspace = true
ton-net-adnl.workspace = true
ton-net-block.workspace = true
ton-net-cell.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
# Only the timer, to bound every call. The socket and runtime come from the caller.
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "test-util"] }
# Already a dependency; listed again so the network tests can drive the proof engine
# directly, which is the only way to check a proof against a block it was not read at.
ton-net-block.workspace = true
